# lgpc

./: CMakeLists.txt  FindGPC.cmake  Makefile  README  dist.info  gpc.def  gpc.lua  lgpc.c  test.lua
